Thu Dec  3 16:37:41 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/framework/TransportSendStrategy.h:
        * dds/DCPS/transport/multicast/MulticastTransport.cpp:

          Reverted previous commit; caused circular dependency.

Thu Dec  3 16:28:34 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/framework/TransportSendStrategy.h:
        * dds/DCPS/transport/multicast/MulticastTransport.cpp:

          Fixed interface leak caused by TransportSendStrategy.

Thu Dec  3 01:34:57 UTC 2009  Paul Calabrese  <calabrese_p@ociweb.com>

        * dds/DCPS/SubscriberImpl.cpp:

          Add some missing if's that could cause segfaults in the
          monitoring code.

        * dds/DCPS/transport/framework/TransportSendBuffer.cpp:

          Fix a VC++ issue with constructor-style initialization of
          references.

        * dds/DCPS/transport/multicast/MulticastTransport.cpp:

          Added a missing header include that VC++ needed to see.

        * tests/DCPS/FooType3Unbounded/FooDef.idl:
        * tests/DCPS/FooType5/FooDef.idl:

          Added missing #include "tao/orb.idl" that was required
          because of VC++ template export issues (see TAO DOC
          Bugzilla #2703 and the TAO FAQ for details).

Thu Dec  3 00:04:35 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>

        * tools/odds_monitor/MonitorData.h:
        * tools/odds_monitor/MonitorData.cpp:
        * tools/odds_monitor/MonitorDataStorage.h:
        * tools/odds_monitor/MonitorDataStorage.inl:
        * tools/odds_monitor/MonitorDataStorage.cpp:

          Continued implementation of data update processing.

Wed Dec  2 23:55:38 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/framework/TransportSendBuffer.cpp:

          Fixed VC9 errors introduced by merge.

Wed Dec  2 23:32:05 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * docs/html/multicast/diagrams/class.dia: